--- a/JAV/actress.html
+++ b/JAV/actress.html
@@ -28,18 +28,23 @@ body { margin:0; font-family:"微软雅黑",sans-serif; background:#0d0d0d; colo
 <script>
 // ======= 配置 =======
 const MAX_PAGE = 52;
-
-// ======= 加载 header 和 footer =======
+  
+/* ======= 加载 header.html + header.js ======= */
 fetch('header.html')
-  .then(r => r.text())
+  .then(res => res.text())
   .then(html => {
     document.getElementById('header-placeholder').innerHTML = html;
-    const s = document.createElement('script');
-    s.src = 'header.js';
-    s.onload = () => console.log('header.js loaded');
-    s.onerror = () => console.error('header.js加载失败');
-    document.body.appendChild(s);
+
+    // 加载 header.js 文件
+    const script = document.createElement('script');
+    script.src = 'header.js';
+    script.onload = () => {
+      if (typeof initHeaderMenu === 'function') initHeaderMenu();
+      if (typeof setActiveMenu === 'function') setActiveMenu('menu-drama');
+    };
+    document.body.appendChild(script);
   });
+
 
 fetch('https://yunvgong.com/footer.html')
   .then(r => r.text())
