--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -2,38 +2,46 @@
 <link rel="stylesheet" href="header.css">
 
 <div class="headerbar">
-  <div class="logo">御女宫-国产自拍区</div>
-  <a href="https://yunvgong.com/CN_SELFIE/index.html" class="logo">御女宫-国产自拍区</a>
+  <div class="logo-wrap">
+    <a href="https://yunvgong.com/CN_SELFIE/index.html" class="logo">御女宫 - 国产自拍区</a>
+  </div>
+
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
     <a href="/CN_SELFIE/Tanhua">探花系列</a>
     <a href="/CN_SELFIE/SexSlave">性奴调教</a>
-	<a href="/CN_SELFIE/student">学生系列</a>
-	<a href="/CN_SELFIE/adulterousWife">淫妻系列</a>
-	<a href="/CN_SELFIE/incest">乱伦系列</a>
-	<a href="/CN_SELFIE/liveStreaming">直播录屏</a>
-	<a href="/CN_SELFIE/DateRape">迷奸</a>
+    <a href="/CN_SELFIE/student">学生系列</a>
+    <a href="/CN_SELFIE/adulterousWife">淫妻系列</a>
+    <a href="/CN_SELFIE/incest">乱伦系列</a>
+    <a href="/CN_SELFIE/liveStreaming">直播录屏</a>
+    <a href="/CN_SELFIE/DateRape">迷奸</a>
     <a href="/CN_SELFIE/CouplesSex">情侣做爱</a>
-	<a href="/CN_SELFIE/oralSex_page">口交</a>
-	<a href="/CN_SELFIE/RearEntry">后入</a>
-	<a href="/CN_SELFIE/Cycling">女上位</a> 
-	<a href="/CN_SELFIE/breasts">巨乳</a>  
-	<a href="/CN_SELFIE/Exposure">露出</a> 
-	<a href="/CN_SELFIE/91pron">91自拍</a>  
-	<a href="/CN_SELFIE/Harem">多女后宫</a>  
-	<a href="/CN_SELFIE/Lewd">多人淫乱</a> 
-	<a href="/CN_SELFIE/Leaked">黑料泄密</a> 
-	<a href="/CN_SELFIE/Upskirting">偷拍裙底</a>
-	<a href="/CN_SELFIE/QJ_Rape">强奸</a>
-	<a href="/CN_SELFIE/MJ_Rape">迷奸</a>
-	<a href="/CN_SELFIE/KTV">KTV</a> 
-	<a href="/CN_SELFIE/virgin">处女</a> 
-	<a href="/CN_SELFIE/casualSex">约炮系列</a>  
-	<a href="/CN_SELFIE/wife">人妻系列</a> 
-	<a href="/CN_SELFIE/pregnantWoman">孕妇系列</a>  
-	<a href="/CN_SELFIE/adultery">偷情系列</a>  
-	<a href="/CN_SELFIE/adulterers">捉奸系列</a>
+    <a href="/CN_SELFIE/oralSex_page">口交</a>
+    <a href="/CN_SELFIE/RearEntry">后入</a>
+    <a href="/CN_SELFIE/Cycling">女上位</a>
+    <a href="/CN_SELFIE/breasts">巨乳</a>
+    <a href="/CN_SELFIE/Exposure">露出</a>
+    <a href="/CN_SELFIE/91pron">91自拍</a>
+    <a href="/CN_SELFIE/Harem">多女后宫</a>
+    <a href="/CN_SELFIE/Lewd">多人淫乱</a>
+    <a href="/CN_SELFIE/Leaked">黑料泄密</a>
+    <a href="/CN_SELFIE/Upskirting">偷拍裙底</a>
+    <a href="/CN_SELFIE/QJ_Rape">强奸</a>
+    <a href="/CN_SELFIE/MJ_Rape">迷奸</a>
+    <a href="/CN_SELFIE/KTV">KTV</a>
+    <a href="/CN_SELFIE/virgin">处女</a>
+    <a href="/CN_SELFIE/casualSex">约炮系列</a>
+    <a href="/CN_SELFIE/wife">人妻系列</a>
+    <a href="/CN_SELFIE/pregnantWoman">孕妇系列</a>
+    <a href="/CN_SELFIE/adultery">偷情系列</a>
+    <a href="/CN_SELFIE/adulterers">捉奸系列</a>
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
   </nav>
 </div>
+
+<script>
+document.getElementById('hamburger').onclick = () => {
+  document.getElementById('navMenu').classList.toggle('active');
+};
+</script>
