--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -17,7 +17,7 @@
     <a href="/CN_SELFIE/liveStreaming">直播录屏</a>
     <a href="/CN_SELFIE/DateRape">迷奸</a>
     <a href="/CN_SELFIE/CouplesSex">情侣做爱</a>
-    <a href="/CN_SELFIE/oralSex_page">口交</a>
+    <a href="/CN_SELFIE/oralSex">口交</a>
     <a href="/CN_SELFIE/RearEntry">后入</a>
     <a href="/CN_SELFIE/Cycling">女上位</a>
     <a href="/CN_SELFIE/breasts">巨乳</a>
