--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -36,7 +36,9 @@
     <a href="/CN_SELFIE/pregnantWoman">孕妇系列</a>
     <a href="/CN_SELFIE/adultery">偷情系列</a>
     <a href="/CN_SELFIE/adulterers">捉奸系列</a>
-    <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">香港三级电报群</a>
+	<a href="/CN_SELFIE/AIstar">明星换脸</a>
+	<a href="/CN_SELFIE/fieldSex">野外做爱</a>
+    <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">电报群</a>
   </nav>
 </div>
 
