--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -37,7 +37,8 @@
     <a href="/CN_SELFIE/adultery">偷情系列</a>
     <a href="/CN_SELFIE/adulterers">捉奸系列</a>
 	<a href="/CN_SELFIE/AIstar">明星换脸</a>
-	<a href="/CN_SELFIE/fieldSex">野外做爱</a>
+	<a href="/CN_SELFIE/fieldSex">野外做爱</a> 
+	<a href="/CN_SELFIE/welfareGirls">福利姬</a>
     <a href="https://t.me/yunvgongCN_SELFIE" target="_blank">电报群</a>
   </nav>
 </div>
