--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -3,7 +3,8 @@
 
 <div class="headerbar">
   <div class="logo-wrap">
-    <a href="https://yunvgong.com/CN_SELFIE/index.html" class="logo">御女宫 - 国产自拍区</a>
+    <a href="https://yunvgong.com/CN_SELFIE/index.html" class="logo">御女宫首页</a>
+    <a href="https://yunvgong.com/CN_SELFIE/index.html" class="logo">御女宫-国产自拍区</a>
   </div>
 
   <div class="hamburger" id="hamburger">&#9776;</div>
