--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -2,8 +2,11 @@
 <link rel="stylesheet" href="header.css">
 
 <div class="headerbar">
-  <div class="logo">御女宫国产AV</div>
-  <a href="https://yunvgong.com/CN_AV/index.html" class="logo">御女宫国产AV</a>
+  <div class="logo-wrap">
+    <a href="https://yunvgong.com/index.html" class="logo">御女宫-首页</a>
+    <a href="https://yunvgong.com/CN_AV/index.html" class="logo">御女宫-国产AV</a>
+  </div>
+
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
