--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -3,8 +3,8 @@
 
 <div class="headerbar">
   <div class="logo-wrap">
-    <a href="https://yunvgong.com/index.html" class="logo">御女宫-首页</a>
-    <a href="https://yunvgong.com/CN_AV/index.html" class="logo">御女宫-国产AV</a>
+    <a href="https://yunvgong.com/index.html" class="logo">御女宫</a>
+    <a href="https://yunvgong.com/CN_AV/index.html" class="logo">国产AV</a>
   </div>
 
   <div class="hamburger" id="hamburger">&#9776;</div>
