--- a/HongKongSex/header.html
+++ b/HongKongSex/header.html
@@ -2,14 +2,19 @@
 <link rel="stylesheet" href="header.css">
 
 <div class="headerbar">
-  <div class="logo">御女宫日本AV</div>
-  <a href="https://yunvgong.com/HongKongSex/index.html" class="logo">御女宫日本AV</a>
-  <div class="hamburger" id="hamburger">&#9776;</div>
+  <div class="logo-wrapper">
+    <div class="logo">御女宫</div>
+    <a href="https://yunvgong.com/HongKongSex/index.html" class="logo">日本AV区</a>
+  </div>
 
-  <nav id="navMenu">
-    <a href="/HongKongSex/HongKong">香港三级</a>
-    <a href="/HongKongSex/Japan">日本三级</a>
-    <a href="/HongKongSex/Korea">韩国女优</a>
-    <a href="https://t.me/yunvgongHongKongSex" target="_blank">香港三级电报群</a>
-  </nav>
+  <div class="nav-wrapper">
+    <nav id="navMenu">
+      <a href="/HongKongSex/HongKong">香港三级</a>
+      <a href="/HongKongSex/Japan">日本三级</a>
+      <a href="/HongKongSex/Korea">韩国女优</a>
+      <a href="https://t.me/yunvgongHongKongSex" target="_blank">香港三级电报群</a>
+    </nav>
+  </div>
+
+  <div class="hamburger" id="hamburger">&#9776;</div>
 </div>
