--- a/HongKongSex/header.html
+++ b/HongKongSex/header.html
@@ -18,3 +18,10 @@
 
   <div class="hamburger" id="hamburger">&#9776;</div>
 </div>
+
+<script>
+document.getElementById('hamburger').onclick = () => {
+  document.getElementById('navMenu').classList.toggle('active');
+};
+</script>
+
