--- a/CN_SELFIE/header.html
+++ b/CN_SELFIE/header.html
@@ -3,7 +3,7 @@
 
 <div class="headerbar">
   <div class="logo-wrap">
-    <a href="https://yunvgong.com/CN_SELFIE/index.html" class="logo">御女宫</a>
+    <a href="https://yunvgong.com/index.html" class="logo">御女宫</a>
     <a href="https://yunvgong.com/CN_SELFIE/index.html" class="logo">国产自拍区</a>
   </div>
 
