--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -17,3 +17,9 @@
     <a href="https://t.me/yunvgongCNAV" target="_blank">电报群</a>
   </nav>
 </div>
+
+<script>
+document.getElementById('hamburger').onclick = () => {
+  document.getElementById('navMenu').classList.toggle('active');
+};
+</script>
