--- a/JAV/header.html
+++ b/JAV/header.html
@@ -2,18 +2,29 @@
 <link rel="stylesheet" href="header.css">
 
 <div class="headerbar">
-  <div class="logo">御女宫日本AV</div>
-  <a href="https://yunvgong.com/JAV/index.html" class="logo">御女宫日本AV</a>
+  <div class="logo-wrapper">
+    <a href="https://yunvgong.com/index.html" class="logo">御女宫</a>
+	<a href="https://yunvgong.com/JAV/index.html" class="logo">御女宫日本AV</a>
+  </div>
+
+  <div class="nav-wrapper">
+    <nav id="navMenu">
+		<a href="/JAV/newAV">最新更新</a>
+		<a href="/JAV/uncensored">日本无码专区</a>
+		<a href="/JAV/censored">日本有码专区</a>
+		<a href="/JAV/FC2">日本FC2</a>
+		<a href="/JAV/actress">日本女优</a>
+		<a href="/JAV/company">A片出品厂</a>
+		<a href="https://t.me/yunvgongJAV" target="_blank">日本AV电报群</a>
+    </nav>
+  </div>
+
   <div class="hamburger" id="hamburger">&#9776;</div>
-
-  <nav id="navMenu">
-    <a href="/JAV/newAV">最新更新</a>
-
-	<a href="/JAV/uncensored">日本无码专区</a>
-	<a href="/JAV/censored">日本有码专区</a>
-	<a href="/JAV/FC2">日本FC2</a>
-    <a href="/JAV/actress">日本女优</a>
-    <a href="/JAV/company">A片出品厂</a>
-    <a href="https://t.me/yunvgongJAV" target="_blank">日本AV电报群</a>
-  </nav>
 </div>
+
+<script>
+document.getElementById('hamburger').onclick = () => {
+  document.getElementById('navMenu').classList.toggle('active');
+};
+</script>
+
