--- a/JAV/header.html
+++ b/JAV/header.html
@@ -2,13 +2,14 @@
 <link rel="stylesheet" href="header.css">
 
 <div class="headerbar">
-  <div class="logo-wrapper">
+  <div class="logo-wrap">
     <a href="https://yunvgong.com/index.html" class="logo">御女宫</a>
 	<a href="https://yunvgong.com/JAV/index.html" class="logo">御女宫日本AV</a>
   </div>
 
-  <div class="nav-wrapper">
-    <nav id="navMenu">
+  <div class="hamburger" id="hamburger">&#9776;</div>
+
+  <nav id="navMenu">
 		<a href="/JAV/newAV">最新更新</a>
 		<a href="/JAV/uncensored">日本无码专区</a>
 		<a href="/JAV/censored">日本有码专区</a>
@@ -16,10 +17,7 @@
 		<a href="/JAV/actress">日本女优</a>
 		<a href="/JAV/company">A片出品厂</a>
 		<a href="https://t.me/yunvgongJAV" target="_blank">日本AV电报群</a>
-    </nav>
-  </div>
-
-  <div class="hamburger" id="hamburger">&#9776;</div>
+  </nav>
 </div>
 
 <script>
@@ -27,4 +25,3 @@ document.getElementById('hamburger').onclick = () => {
   document.getElementById('navMenu').classList.toggle('active');
 };
 </script>
-
