--- a/CN_AV/actress.html
+++ b/CN_AV/actress.html
@@ -82,6 +82,14 @@ body {
 .pagination button:hover:not(:disabled) { background: #555; }
 .pagination button:disabled { opacity: 0.4; cursor: not-allowed; }
 .pagination span { font-size: 14px; }
+/* 固定 header */
+#header-placeholder {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
 </style>
 </head>
 <body>
