--- a/CN_AV/chinese_AV.html
+++ b/CN_AV/chinese_AV.html
@@ -134,6 +134,14 @@ body {
   text-align: center;
 }
 .pagination span { font-size: 14px; }
+/* 固定 header */
+#header-placeholder {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
 </style>
 </head>
 <body>
