--- a/JAV/actress.html
+++ b/JAV/actress.html
@@ -17,6 +17,14 @@ body { margin:0; font-family:"微软雅黑",sans-serif; background:#0d0d0d; colo
 .pagination button:hover:not(:disabled) { background:#555; }
 .pagination button:disabled { opacity:.4; cursor:not-allowed; }
 .pagination input { width:50px; padding:4px; background:#222; border:1px solid #555; color:#fff; text-align:center; border-radius:4px; }
+/* 固定 header */
+#header-placeholder {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
 </style>
 </head>
 <body>
