--- a/EcchiAnime/header.html
+++ b/EcchiAnime/header.html
@@ -8,7 +8,8 @@
 
   <nav id="navMenu">
     <a href="/EcchiAnime/newAV">最新更新</a>
-    <a href="/EcchiAnime/main">日本肉番动漫</a>
+    <a href="/EcchiAnime/JapanHentai">日本肉番动漫</a>
+
     <a href="/EcchiAnime/actress">日本女优</a>
     <a href="/EcchiAnime/company">A片出品厂</a>
     <a href="https://t.me/yunvgongEcchiAnime" target="_blank">日本肉番动漫电报群</a>
