--- a/EcchiAnime/header.html
+++ b/EcchiAnime/header.html
@@ -2,16 +2,16 @@
 <link rel="stylesheet" href="header.css">
 
 <div class="headerbar">
-  <div class="logo">御女宫日本肉番动漫</div>
-  <a href="https://yunvgong.com/EcchiAnime/index.html" class="logo">御女宫日本肉番动漫</a>
+  <div class="logo">御女宫</div>
+  <a href="https://yunvgong.com/EcchiAnime/index.html" class="logo">日本肉番动漫</a>
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
-    <a href="/EcchiAnime/newAV">最新更新</a>
+ 
     <a href="/EcchiAnime/JapanHentai">日本肉番动漫</a>
-
-    <a href="/EcchiAnime/actress">日本女优</a>
-    <a href="/EcchiAnime/company">A片出品厂</a>
+    <a href="/EcchiAnime/3D">3D动漫</a>
+    <a href="/EcchiAnime/MMD">MMD</a>
+	<a href="/EcchiAnime/FanmadeAnime">同人动漫</a>
     <a href="https://t.me/yunvgongEcchiAnime" target="_blank">日本肉番动漫电报群</a>
   </nav>
 </div>
