--- a/EcchiAnime/player_template.html
+++ b/EcchiAnime/player_template.html
@@ -322,7 +322,7 @@ function getSeriesName() {
 }
 
 function loadSeriesData(seriesName) {
-    const dataUrl = `https://yunvgong.com/JAV/menu/${seriesName}_data.json`;
+    const dataUrl = `https://yunvgong.com/EcchiAnime/menu/${seriesName}_data.json`;
     fetch(dataUrl)
     .then(res => {
         if(!res.ok) throw new Error(`HTTP ${res.status}`);
