--- a/EcchiAnime/JapanHentai.html
+++ b/EcchiAnime/JapanHentai.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>国产AV - 影片列表</title>
+<title>日本动漫 - 影片列表</title>
 <style>
 body { margin:0; font-family:"微软雅黑",sans-serif; background:#0d0d0d; color:#fff; padding-top:60px; }
 .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(240px,1fr)); gap:20px; padding:20px; }
@@ -143,7 +143,7 @@ renderPagination(pageNumber);
 
 // 动态加载对应页 JS
 const script = document.createElement('script');
-script.src = `https://yunvgong.com/HongKongSex/category/JapanHentai_page/page_${pageNumber}.js`;
+script.src = `https://yunvgong.com/EcchiAnime/category/JapanHentai_page/page_${pageNumber}.js`;
 script.onload = ()=>{
   if(typeof window.PAGE_DATA !== 'undefined'){
     renderAll(window.PAGE_DATA);
