--- a/footer.html
+++ b/footer.html
@@ -28,12 +28,12 @@
         <ul class="footer-links-columns">
 		
 		  <li><a href="https://yunvgong.com/index.html" target="_blank">御女宫导航</a></li>
-		  <li><a href="https://yunvgong.com/CN_AV/index.html" target="_blank">国产AV频道</a></li>
+		  <li><a href="https://yunvgong.com/CN_AV/index.html" target="_blank">国产AV区</a></li>
           <li><a href="https://yunvgong.com/JAV/index.html" target="_blank">日本AV频道</a></li>
-          <li><a href="#">香港三级</a></li>
-          <li><a href="#">电影连续剧</a></li>
-          <li><a href="#">COS图集</a></li>
-          <li><a href="#">色漫频道</a></li>
+          <li><a href="https://yunvgong.com/HongKongSex/index.html">香港三级</a></li>
+          <li><a href="https://yunvgong.com/CN_SELFIE/index.html">国产自拍区</a></li>
+          <li><a href="https://yunvgong.com/EcchiAnime/index.html">肉番动漫</a></li>
+          <li><a href="https://yunvgong.com/福利姬频道总目录/index.html">COS福利姬图库</a></li>
         </ul>
       </div>
     </div>
